feat: criando rotas para categorias e adicionando no swagger
