# application/http/views/challenges_categories_input_view.go
@@ -1,0 +1,6 @@
+package views
+
+type ChallengesCategoriesInputView struct {
+	Title  string `json:"title" biding:"required"`
+	UserId string
+}
